[gd_scene load_steps=2 format=3 uid="uid://dmju7mmup3tvk"]

[ext_resource type="Script" path="res://UI/Settings/main_menu_settings.gd" id="1_433fk"]

[node name="MainMenuSettings" type="Control" node_paths=PackedStringArray("sound_slider", "is_muted")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_433fk")
sound_slider = NodePath("MarginContainer/VBoxContainer/sound_slider")
is_muted = NodePath("MarginContainer/VBoxContainer/CheckBox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -684.5
offset_top = -382.5
offset_right = 684.5
offset_bottom = 382.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.596078)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -247.0
offset_right = 328.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound"

[node name="sound_slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "	Mute"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -20.0
offset_right = 100.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main Menu" type="Button" parent="MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/sound_slider" to="." method="_on_sound_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer2/Main Menu" to="." method="_on_main_menu_pressed"]
